Vou tentar atualizar o angular

--- a/public/app/caixas/views/create-caixa.client.view.html
+++ b/public/app/caixas/views/create-caixa.client.view.html
@@ -43,7 +43,7 @@
                                             <div class="form-group form-group-sm">
                                                 <div class="input-group">
                                                     <label class="input-group-addon"><i class="fa fa-calendar"></i></label>
-                                                    <input type="date" class="form-control" data-ng-model="data_caixa.valor">
+                                                    <input type="date" class="form-control" data-ng-model="caixa.data_caixa">
                                                 </div>
                                             </div> <!-- Grupo Data do Caixa -->
 
@@ -52,11 +52,11 @@
                                                 <label><small>Abertura</small></label>
                                                 <div class="input-group m-b-sm">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Manhã"><i class="fa fa-coffee"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="entradas.abertura.manha.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.entradas.abertura.manha.valor">
                                                 </div>
                                                 <div class="input-group">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Tarde"><i class="fa fa-sun-o"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="entradas.abertura.tarde.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.entradas.abertura.tarde.valor">
                                                 </div>
                                             </div> <!-- Grupo Abertura -->
 
@@ -65,11 +65,11 @@
                                                 <label><small>Venda</small></label>
                                                 <div class="input-group m-b-sm">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Manhã"><i class="fa fa-coffee"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="entradas.vendas.manha.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.entradas.vendas.manha.valor">
                                                 </div>
                                                 <div class="input-group">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Tarde"><i class="fa fa-sun-o"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="entradas.vendas.tarde.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.entradas.vendas.tarde.valor">
                                                 </div>
                                             </div> <!-- Grupo Venda -->
 
@@ -94,7 +94,7 @@
                                             <div class="form-group form-group-sm">
                                                 <div class="input-group">
                                                     <label class="input-group-addon"><i class="fa fa-calendar"></i></label>
-                                                    <input type="date" class="form-control" data-ng-model="data_caixa.valor">
+                                                    <input type="date" class="form-control" data-ng-model="caixa.data_caixa">
                                                 </div>
                                             </div> <!-- Grupo Data do Caixa -->
 
@@ -103,11 +103,11 @@
                                                 <label><small>Transferências</small></label>
                                                 <div class="input-group m-b-sm">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Manhã"><i class="fa fa-coffee"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="saidas.transferencia.manha.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.saidas.transferencia.manha.valor">
                                                 </div>
                                                 <div class="input-group">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Tarde"><i class="fa fa-sun-o"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="saidas.transferencia.tarde.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.saidas.transferencia.tarde.valor">
                                                 </div>
                                             </div> <!-- Grupo Transferência -->
 
@@ -116,11 +116,11 @@
                                                 <label><small>Dinheiro</small></label>
                                                 <div class="input-group m-b-sm">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Manhã"><i class="fa fa-coffee"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="saidas.dinheiro.manha.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.saidas.dinheiro.manha.valor">
                                                 </div>
                                                 <div class="input-group">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Tarde"><i class="fa fa-sun-o"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="saidas.dinheiro.tarde.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.saidas.dinheiro.tarde.valor">
                                                 </div>
                                             </div> <!-- Grupo Dinheiro -->
 
@@ -145,7 +145,7 @@
                                             <div class="form-group form-group-sm">
                                                 <div class="input-group">
                                                     <label class="input-group-addon"><i class="fa fa-calendar"></i></label>
-                                                    <input type="date" class="form-control" data-ng-model="data_caixa.valor">
+                                                    <input type="date" class="form-control" data-ng-model="caixa.data_caixa">
                                                 </div>
                                             </div> <!-- Grupo Data do Caixa -->
 
@@ -154,11 +154,11 @@
                                                 <label><small>Fita Branca</small></label>
                                                 <div class="input-group m-b-sm">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Manhã"><i class="fa fa-coffee"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="controles.fiscal.fita_branca.manha.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.controles.fiscal.fita_branca.manha.valor">
                                                 </div>
                                                 <div class="input-group">
                                                     <label class="input-group-addon" tooltip-placement="left" tooltip="Tarde"><i class="fa fa-sun-o"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="controles.fiscal.fita_branca.tarde.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.controles.fiscal.fita_branca.tarde.valor">
                                                 </div>
                                             </div> <!-- Fita Branca -->
 
@@ -167,7 +167,7 @@
                                                 <label><small>Leitura Z</small></label>
                                                 <div class="input-group">
                                                     <label class="input-group-addon"><i class="fa fa-print"></i></label>
-                                                    <input type="number" step="any" class="form-control" data-ng-model="controles.fiscal.leitura_z.valor">
+                                                    <input type="number" step="any" class="form-control" data-ng-model="caixa.controles.fiscal.leitura_z.valor">
                                                 </div>
                                             </div> <!-- Leitura Z -->
 
@@ -409,10 +409,6 @@
                                             <div class="form">
 
                                                 <h4 class="m-b-lg">Lançamento de Cartões</h4>
-
-                                                <div class="form-group form-group-sm">
-                                                    <input type="hidden" name="tipo_cartao" data-ng-model="objCartao.tipo" ng-value="tipo_cartao" ng-init="tipo_cartao='Cartão'">
-                                                </div> <!-- Input INVISÍVEL para informar o tipo do lancamento para facilitar a função que joga o obj no array correspondente -->
 
                                                 <div class="form-group form-group-sm">
                                                     <input type="number" step="any" placeholder="Valor" class="form-control" data-ng-model="obj.cartao.valor">
