--- a/public/app/caixas/views/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit-caixa.client.view.html
@@ -378,7 +378,7 @@
                                                 <div class="form-group form-group-sm">
                                                     <div class="input-group">
                                                         <label class="input-group-addon"><i class="fa fa-calendar"></i></label>
-                                                        <input type="date" class="form-control" data-ng-model="caixa.data_caixa.valor">
+                                                        <input type="date" class="form-control" data-ng-model="caixa.data_caixa">
                                                     </div>
                                                 </div> <!-- Grupo Data do Caixa -->
 
