fazer upload heroku

--- a/public/app/caixas/views/view-caixa.client.view.html
+++ b/public/app/caixas/views/view-caixa.client.view.html
@@ -25,8 +25,7 @@
 
                     <div class="pull-right">
                         <div class="btn-group">
-                            <a type="button" ng-href="#!/caixas/{{ caixa._id }}/edit" class="btn btn-xs btn-white active" ng-click="toggleViews.toggle('edit_caixa_page', 'check')">Check</a>
-                            <a type="button" ng-href="#!/caixas/{{ caixa._id }}/edit" class="btn btn-xs btn-white" ng-click="toggleViews.toggle('edit_caixa_page', 'edit')">Edição</a>
+                            <a type="button" ng-href="#!/caixas/{{ caixa._id }}/edit" class="btn btn-xs btn-success active">Editar</a>
                             <!--<button type="button" class="btn btn-xs btn-white">Annual</button>-->
                         </div>
                     </div>
