--- a/public/app/caixas/views/dashboard-caixas.client.view.html
+++ b/public/app/caixas/views/dashboard-caixas.client.view.html
@@ -117,82 +117,24 @@
         <div class="col-lg-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>Messages</h5>
+                    <h5>Controles</h5>
                     <div ibox-tools></div>
                 </div>
                 <div class="ibox-content ibox-heading">
-                    <h3><i class="fa fa-envelope-o"></i> New messages</h3>
-                    <small><i class="fa fa-tim"></i> You have 22 new messages and 16 waiting in draft folder.</small>
+                    <h3><i class="fa fa-cutlery m-r-sm" style="font-size: .89em;"></i> Salgados</h3>
+                    <small><i class="fa fa-tim"></i> Controle do aproveitamento de salgados</small>
                 </div>
                 <div class="ibox-content">
                     <div class="feed-activity-list">
 
-                        <div class="feed-element">
+                        <div class="feed-element" data-ng-repeat="prod in dashboard.produtos">
                             <div>
-                                <small class="pull-right text-navy">1m ago</small>
-                                <strong>Monica Smith</strong>
-
-                                <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</div>
-                                <small class="text-muted">Today 5:60 pm - 12.06.2014</small>
-                            </div>
-                        </div>
-
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">2m ago</small>
-                                <strong>Jogn Angel</strong>
-
-                                <div>There are many variations of passages of Lorem Ipsum available</div>
-                                <small class="text-muted">Today 2:23 pm - 11.06.2014</small>
-                            </div>
-                        </div>
-
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">5m ago</small>
-                                <strong>Jesica Ocean</strong>
-
-                                <div>Contrary to popular belief, Lorem Ipsum</div>
-                                <small class="text-muted">Today 1:00 pm - 08.06.2014</small>
-                            </div>
-                        </div>
-
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">5m ago</small>
-                                <strong>Monica Jackson</strong>
-
-                                <div>The generated Lorem Ipsum is therefore</div>
-                                <small class="text-muted">Yesterday 8:48 pm - 10.06.2014</small>
-                            </div>
-                        </div>
-
-
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">5m ago</small>
-                                <strong>Anna Legend</strong>
-
-                                <div>All the Lorem Ipsum generators on the Internet tend to repeat</div>
-                                <small class="text-muted">Yesterday 8:48 pm - 10.06.2014</small>
-                            </div>
-                        </div>
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">5m ago</small>
-                                <strong>Damian Nowak</strong>
-
-                                <div>The standard chunk of Lorem Ipsum used</div>
-                                <small class="text-muted">Yesterday 8:48 pm - 10.06.2014</small>
-                            </div>
-                        </div>
-                        <div class="feed-element">
-                            <div>
-                                <small class="pull-right">5m ago</small>
-                                <strong>Gary Smith</strong>
-
-                                <div>200 Latin words, combined with a handful</div>
-                                <small class="text-muted">Yesterday 8:48 pm - 10.06.2014</small>
+                                <small class="pull-right text-navy">{{ prod.dias }} dias</small>
+                                <strong>{{ prod.nome | limitTo: 25 }}</strong>
+                                <div class="m-t-sm">vendidos: {{ prod.venda.qtd }} - média: {{ prod.venda.media | number: 2 }}</div>
+                                <div class="m-t-sm">vendidos: {{ prod.perda.qtd }} - média: {{ prod.perda.media | number: 2 }}</div>
+                                <div class="m-t-sm">vendidos: {{ prod.uso.qtd }} - média: {{ prod.uso.media | number: 2 }}</div>
+                                <small class="text-muted m-t-sm">Today 5:60 pm - 12.06.2014</small>
                             </div>
                         </div>
 
@@ -207,63 +149,32 @@
                 <div class="col-lg-6">
                     <div class="ibox float-e-margins">
                         <div class="ibox-title">
-                            <h5>User project list</h5>
+                            <h5>Controles</h5>
                             <div ibox-tools></div>
                         </div>
                         <div class="ibox-content">
                             <table class="table table-hover no-margins">
                                 <thead>
                                 <tr>
-                                    <th>Status</th>
-                                    <th>Date</th>
-                                    <th>User</th>
-                                    <th>Value</th>
+                                    <th>Produto</th>
+                                    <th class="text-center">Venda / md</th>
+                                    <th class="text-center">Perda / md</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr data-ng-repeat="prod in dashboard.produtos">
                                     <td>
-                                        <small>Pending...</small>
+                                        <small class="m-r-sm"><i class="fa fa-cutlery"></i> </small>
+                                        <small>{{ prod.nome }}</small>
                                     </td>
-                                    <td><i class="fa fa-clock-o"></i> 11:20pm</td>
-                                    <td>Samantha</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 24%</td>
-                                </tr>
-                                <tr>
-                                    <td><span class="label label-warning">Canceled</span></td>
-                                    <td><i class="fa fa-clock-o"></i> 10:40am</td>
-                                    <td>Monica</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 66%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <small>Pending...</small>
+                                    <td class="text-center">
+                                        <small>{{ prod.venda.qtd }} / </small>
+                                        <small>{{ prod.venda.media | number: 1 }}</small>
                                     </td>
-                                    <td><i class="fa fa-clock-o"></i> 01:30pm</td>
-                                    <td>John</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 54%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <small>Pending...</small>
+                                    <td class="text-center">
+                                        <small>{{ prod.perda.qtd }} / </small>
+                                        <small>{{ prod.perda.media | number: 1 }}</small>
                                     </td>
-                                    <td><i class="fa fa-clock-o"></i> 02:20pm</td>
-                                    <td>Agnes</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 12%</td>
-                                </tr>
-                                <tr>
-                                    <td><span class="label label-primary">Completed</span></td>
-                                    <td><i class="fa fa-clock-o"></i> 04:10am</td>
-                                    <td>Amelia</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 66%</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <small>Pending...</small>
-                                    </td>
-                                    <td><i class="fa fa-clock-o"></i> 12:08am</td>
-                                    <td>Damian</td>
-                                    <td class="text-navy"><i class="fa fa-level-up"></i> 23%</td>
                                 </tr>
                                 </tbody>
                             </table>
