--- a/public/views/common/navigation.html
+++ b/public/views/common/navigation.html
@@ -28,9 +28,10 @@
             <li>
                 <a href=""><i class="fa fa-calculator"></i> <span class="nav-label"> Caixas</span> <span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
-                    <li ui-sref-active="active"><a ui-sref="caixa_dashboard"> Dashboard</a></li>
                     <li ui-sref-active="active"><a ui-sref="caixa_list"> Listar</a></li>
                     <li ui-sref-active="active"><a ui-sref="caixa_create"> Criar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="caixa_dashboard"> Dashboard</a></li>
+                    <li ui-sref-active="active"><a ui-sref="caixa_relatorios"> Relatórios</a></li>
                 </ul>
             </li>
             <li>
