--- a/public/app/caixas/views/dashboard-caixas.client.view.html
+++ b/public/app/caixas/views/dashboard-caixas.client.view.html
@@ -1,4 +1,4 @@
-<div class="wrapper wrapper-content" data-ng-controller="DashboardsController" data-ng-init="findNew()">
+<div class="wrapper wrapper-content" data-ng-controller="DashboardsController" data-ng-init="loadCurrentMonth()">
 
     <div class="row">
         <div class="col-lg-12">
@@ -14,7 +14,7 @@
                         <input type="date" class="form-control" data-ng-model="datas.final">
                     </div>
                     <div class="form-group">
-                        <span class="btn btn-success m-t-sm m-l-md" style="border-color: white;" ng-click="comparacao()">Buscar</span>
+                        <span class="btn btn-success m-t-sm m-l-md" style="border-color: white;" ng-click="loadPeriod(datas.inicial, datas.final)">Buscar</span>
                     </div>
                 </div>
             </div>
@@ -25,56 +25,56 @@
         <div class="col-lg-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-success pull-right">Monthly</span>
+                    <span class="label label-success pull-right">Mar 2017</span>
                     <h5>Venda</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ dashboard.totais.venda | currency: 'R$ ' }}</h1>
+                    <h1 class="no-margins">{{ dashboard.totais.vendas | currency: 'R$ ' }}</h1>
 
                     <div class="stat-percent font-bold text-success">98% <i class="fa fa-bolt"></i></div>
-                    <small>Total income</small>
+                    <small>Venda total</small>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-info pull-right">Annual</span>
+                    <span class="label label-info pull-right">Mar 2017</span>
                     <h5>Cartões</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">{{ dashboard.cartoes.total | currency: 'R$ ' }}</h1>
+                    <h1 class="no-margins">{{ dashboard.totais.cartoes | currency: 'R$ ' }}</h1>
 
                     <div class="stat-percent font-bold text-info">20% <i class="fa fa-level-up"></i></div>
-                    <small>Débito</small>
+                    <small>Venda total no Cartão</small>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-primary pull-right">Today</span>
-                    <h5>Vistits</h5>
+                    <span class="label label-primary pull-right">Vendidos</span>
+                    <h5>Produtos</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">106,120</h1>
+                    <h1 class="no-margins">{{ dashboard.totais.produtos.vendas }}</h1>
 
                     <div class="stat-percent font-bold text-navy">44% <i class="fa fa-level-up"></i></div>
-                    <small>New visits</small>
+                    <small>Total de produtos vendidos</small>
                 </div>
             </div>
         </div>
         <div class="col-lg-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <span class="label label-danger pull-right">Low value</span>
-                    <h5>User activity</h5>
+                    <span class="label label-danger pull-right">Perdas</span>
+                    <h5>Produtos</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">80,600</h1>
+                    <h1 class="no-margins">{{ dashboard.totais.produtos.perdas }}</h1>
 
                     <div class="stat-percent font-bold text-danger">38% <i class="fa fa-level-down"></i></div>
-                    <small>In first month</small>
+                    <small>Total de salgados perdidos</small>
                 </div>
             </div>
         </div>
@@ -104,8 +104,8 @@
                         <div class="col-lg-3">
                             <ul class="stat-list">
                                 <li>
-                                    <h2 class="no-margins">2,346</h2>
-                                    <small>Total orders in period</small>
+                                    <h2 class="no-margins">{{ dashboard.totais.leitura_z | currency: 'R$ ' }}</h2>
+                                    <small>Total Leitura Z</small>
                                     <div class="stat-percent">48% <i class="fa fa-level-up text-navy"></i></div>
                                     <div class="progress progress-mini">
                                         <div style="width: 48%;" class="progress-bar"></div>
